# CaravanCardGame

./: LICENSE.txt  README.md  __init__.py  __main__.py  pyproject.toml  setup.py
caravan_tools/: moves.py
caravanassets/: __init__.py  __main__.py  cards.py  module_test.py  moves.py  run_app.py
caravanassets/gui/: app.py  buttons.py  gui_test.py
