[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caravanassets"
version = "0.1.3"
authors = [
  { name="Anri Tabuev", email="anri.tabuev@gmail.com" },
]
description = "This is a python package for implementing the card game Caravan"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]

dependencies = [
    "click"
]

[project.urls]
"Homepage" = "https://github.com/Anritab/CaravanCardGame"
"Bug Tracker" = "https://github.com/Anritab/CaravanCardGame/issues"