[tool.poetry]
name = "caravanassets"
version = "0.1.4"
description = "This is a python package for implementing the card game Caravan"

license = "MIT"

authors = ["Anri Tabuev <anri.tabuev@gmail.com>"]
[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pyqt5 = "^5.15.9"
pytest-qt = "^4.2.0"

